--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -20,70 +20,19 @@ default:
                 debug: false
         SensioLabs\Behat\PageObjectExtension\Extension: ~
 
-jenkins-1:
+ci:
     context:
         parameters:
-            base_url: http://pim-behat-1.ci/
+            base_url: http://behat.ci/
     extensions:
         Behat\MinkExtension\Extension:
-            base_url: http://pim-behat-1.ci/
+            base_url: http://behat.ci/
         Behat\Symfony2Extension\Extension:
             kernel:
-                env: behat1
+                env: behat
     formatter:
         name: Context\SummaryFormatter,junit
         parameters:
-            output_path: null,app/build/logs/behat/
+            output_path: app/build/logs/behat/summary.log,app/build/logs/behat/
     filters:
-        tags: ~skip&&~skip-pef&&~doc
-
-jenkins-2:
-    context:
-        parameters:
-            base_url: http://pim-behat-2.ci/
-    extensions:
-        Behat\MinkExtension\Extension:
-            base_url: http://pim-behat-2.ci/
-        Behat\Symfony2Extension\Extension:
-            kernel:
-                env: behat2
-    formatter:
-        name: Context\SummaryFormatter,junit
-        parameters:
-            output_path: null,app/build/logs/behat/
-    filters:
-        tags: ~skip&&~skip-pef&&~doc
-
-jenkins-3:
-    context:
-        parameters:
-            base_url: http://pim-behat-3.ci/
-    extensions:
-        Behat\MinkExtension\Extension:
-            base_url: http://pim-behat-3.ci/
-        Behat\Symfony2Extension\Extension:
-            kernel:
-                env: behat3
-    formatter:
-        name: Context\SummaryFormatter,junit
-        parameters:
-            output_path: null,app/build/logs/behat/
-    filters:
-        tags: ~skip&&~skip-pef&&~doc
-
-jenkins-4:
-    context:
-        parameters:
-            base_url: http://pim-behat-4.ci/
-    extensions:
-        Behat\MinkExtension\Extension:
-            base_url: http://pim-behat-4.ci/
-        Behat\Symfony2Extension\Extension:
-            kernel:
-                env: behat4
-    formatter:
-        name: Context\SummaryFormatter,junit
-        parameters:
-            output_path: null,app/build/logs/behat/
-    filters:
-        tags: ~skip&&~skip-pef&&~doc
+        tags: ~skip&&~doc
